# rust-cqrs-clean-arch

./: Cargo.toml  README.md  api.http
src/: lib.rs  main.rs
src/api/: mod.rs  router.rs
src/application/commands/: create_todo_command.rs  mod.rs
src/application/queries/: mod.rs
src/domain/models/: todo.rs
src/infrastructure/data/repositories/: todo_repository.rs
