[package]
name = "rust-cqrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = {version = "0.4.34" , features = ["serde"] }
serde = { version =  "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio ={ version = "1.36.0", features = ["full"] }
tower-http = {version = "0.5.1",  features = ["cors"] }
uuid = {version = "1.7.0" ,  features =["v4" , "fast-rng"] }
